@@ -611,12 +611,14 @@ lib/gecoder/interface/binding_changes.rb -text
 lib/gecoder/interface/branch.rb -text
 lib/gecoder/interface/constraints.rb -text
 lib/gecoder/interface/constraints/bool/boolean.rb -text
+lib/gecoder/interface/constraints/bool/channel.rb -text
 lib/gecoder/interface/constraints/bool/linear.rb -text
 lib/gecoder/interface/constraints/bool_enum/extensional.rb -text
 lib/gecoder/interface/constraints/bool_enum/relation.rb -text
 lib/gecoder/interface/constraints/bool_enum_constraints.rb -text
 lib/gecoder/interface/constraints/bool_var_constraints.rb -text
 lib/gecoder/interface/constraints/int/arithmetic.rb -text
+lib/gecoder/interface/constraints/int/channel.rb -text
 lib/gecoder/interface/constraints/int/domain.rb -text
 lib/gecoder/interface/constraints/int/linear.rb -text
 lib/gecoder/interface/constraints/int_enum/arithmetic.rb -text
