@@ -73,3 +73,4 @@ end
 
 require 'gecoder/interface/constraints/bool/boolean'
 require 'gecoder/interface/constraints/bool/linear'
+require 'gecoder/interface/constraints/bool/channel'
