@@ -56,3 +56,4 @@ end
 require 'gecoder/interface/constraints/int/linear'
 require 'gecoder/interface/constraints/int/domain'
 require 'gecoder/interface/constraints/int/arithmetic'
+require 'gecoder/interface/constraints/int/channel'
