@@ -3,6 +3,7 @@
 * Wrapping an enumerable that is already wrapped is no longer allowed.
 * Added search statistics.
 * Added the squared value and square root constraints.
+* Added channel constraints between single integer variables and boolean variables.
 
 == Version 0.8.1
 This release adds tuple constraints along with a couple of minor features. It 
